--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="w-100 vh-100 d-flex justify-content-center align-items-center">
-            <div class="w-50 border rounded-1 p-3 d-flex flex-column">
+            <form class="w-50 border rounded-1 p-3 d-flex flex-column" id="form">
                 <h2 class="mb-2 mt-2">Registro</h2>
                 <div class="mb-3">
                     <label class="form-label">Nombre</label>
@@ -31,7 +31,8 @@
                     <input type="password" class="form-control">
                 </div>
                 <input type="submit" class="btn btn-primary w-25 align-self-center mt-4" value="Submit">
-            </div>
+            </form>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
