--- a/index.html
+++ b/index.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sign-Up</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="w-100 vh-100 d-flex justify-content-center align-items-center">
-            <form class="w-50 border rounded-1 p-3 d-flex flex-column" id="form">
-                <h2 class="mb-2 mt-2">Registro</h2>
-                <div class="mb-3">
-                    <label class="form-label">Nombre</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Apellido</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Nombre de Usuario</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Contraseña</label>
-                    <input type="password" class="form-control">
-                </div>
-                <input type="submit" class="btn btn-primary w-25 align-self-center mt-4" value="Submit">
-            </form>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous"
+    >
+</head>
+<body>
+    <div class="container vh-100 w-100 d-flex justify-content-center align-items-center">
+        <div class="w-25 h-25 border rounded-3 d-flex flex-column justify-content-center align-items-center">
+            <input type="button" class="btn btn-primary w-50 m-2" value="Registro">
+            <input type="button" class="btn btn-primary w-50 m-2" value="Inicio de Sesión">
         </div>
-        <script src="index.js"></script>
-    </body>
+    </div>
+</body>
 </html>
